{
    "version": 1,
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Ingame",
            "id": "d07d8de0-22f2-4308-a7c5-c808b1f1eeea",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a7309ca1-ab68-45b2-b54c-f5a945c99c24",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "3fa3c8ab-6efd-4285-a85f-5c15eadcd28c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TimePause",
                    "type": "Button",
                    "id": "8a1b6bdb-9f76-4559-8eef-25d6c0960c3c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartInteract",
                    "type": "Button",
                    "id": "a99c1b61-ef57-4253-879c-fdd530995076",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelInteract",
                    "type": "Button",
                    "id": "86b48182-2260-4e8e-aa9c-bbb6e5ded0d3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetInteract",
                    "type": "Button",
                    "id": "3479cb5b-b920-4a29-b374-bd7f48c98431",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "633761ad-f8ef-42b4-a297-c5d816366a31",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "52d1ca7c-19c7-4e28-9eb9-60697943adfd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Redo",
                    "type": "Button",
                    "id": "d8e742b0-b5b1-46d9-823e-4c03b0327068",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "d451d064-8be5-40e6-a468-86e322b8f681",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "445a84d4-be98-4806-94a7-069a641a48de",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e4c6180e-280c-4f55-943a-a5c1236464c5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f14d5d61-a432-4a42-a747-1834a1a755f8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1620a084-abd3-4d13-8aec-2614d8b84615",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "da9787cc-b9de-43a1-986d-9dcea4384610",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f990fedf-133f-4390-a38e-3f6633f00f15",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "776ca30b-941f-46e5-ae49-dea89283dea1",
                    "path": "<Keyboard>/t",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TimePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e658b5e-00c2-46a0-b155-ea42b2b439fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e85381cb-d7ab-433d-ae72-66e86fc4194b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a11e2712-ea36-4ae2-9555-b10e047d585c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f975ccb8-3c29-436c-99bd-f945e634fc96",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4646db6b-47b0-4b57-a95d-57a25f5146b1",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "841c7115-87ce-4344-a7c6-0758ace056d4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2da2f870-f782-4272-9ab0-211902fd9675",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}